<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android1="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android1:layout_width="match_parent"
    android1:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account" />

        <EditText
            android:id="@+id/editTextAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/tip_loginid"
            android:ems="10" >
        </EditText>

        <Button
            android:id="@+id/buttonQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_query"
            android:onClick="onQuery"
        />
    </LinearLayout>

</LinearLayout>